--- a/notTidyHpInfo/html/subpages002_ap/pages/00_blog_sample.html
+++ b/notTidyHpInfo/html/subpages002_ap/pages/00_blog_sample.html
@@ -11,6 +11,11 @@
 最終更新日付：2016/12/20（火）
 <h1>タイトル</h1>
 <div id="toc"></div>
+
+<div id="animate-title">タイトル</div>
+<div id="animate-block">折りたたむエリア</div>
+
+
 <!--
 <ul>
 <li>全体サイズとしては3000文字が目安
