--- a/notTidyHpInfo/000testSite001/html/001ap/apc001tab001.html
+++ b/notTidyHpInfo/000testSite001/html/001ap/apc001tab001.html
@@ -23,10 +23,10 @@
 <h2>解決策提起</h2>
 <h2>解決策根拠</h2>
  -->
-<h1>画像テスト(png)</h1>
-<img border="0" src="../../images/test.png" >
-<h1>画像テスト(jpeg)</h1>
-<img border="0" src="../../images/test.jpg" >
+<!-- 画像テスト -->
+<p class="resizeimage">
+   <img src="../../images/home/test.png" alt="公園">
+</p>
 
 <ul>
 <li> 前提として、CentOS6.5 の構築後の作業
