--- a/notTidyHpInfo/000testSite001/html/002kh/khc001tab001.html
+++ b/notTidyHpInfo/000testSite001/html/002kh/khc001tab001.html
@@ -9,78 +9,22 @@
 </head>
 <body>
 最終更新日付：2016/11/28（月）
-<h1>のうはう</h1>
-<div id="toc"></div>
+<h1>【DB】【MySQL】rootパスワードを忘れた場合</h1>
 
-<!--
+<!--===============================================================================================================-->
+<h3>現象</h3>
 <ul>
-<li>全体サイズとしては3000文字が目安
-<li>タイトルは28文字以内
-<li>キーワードプランナーを使用
+<li>以下のような現象に出会った場合の対処です
 </ul>
-<img/>
-<h2>問題提起</h2>
-<h2>解決策提起</h2>
-<h2>解決策根拠</h2>
- -->
-<h1>画像テスト(png)</h1>
-<img border="0" src="../../images/test.png" >
-<h1>画像テスト(jpeg)</h1>
-<img border="0" src="../../images/test.jpg" >
-
-<ul>
-<li> 前提として、CentOS6.5 の構築後の作業
-<li> 参考はこちら
-  <ul>
-  <li>http://futurismo.biz/archives/1348
-  </ul>
-<pre class="brush: bash;">
+<pre class="brush: 	bash;" >
+ERROR 1045 (28000): Access denied for user 'root'@'localhost' (using password: YES)
 </pre>
-</ul>
-<!-- テーブル -->
-<table class="type07">
-	<thead>
-	<tr>
-		<th scope="cols">タイトル</th>
-		<th scope="cols">内容</th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	</tbody>
-</table>
-
-<!--===============================================================================================================-->
-<h2>小見出し</h2>
-本文
-
-<!--===============================================================================================================-->
-<h2>小見出し</h2>
-本文
-
-<!--===============================================================================================================-->
-<h2>小見出し</h2>
-本文
 
 
 
 
-<!--===============================================================================================================-->
-<h2>まとめ</h2>
-結論
-<!--===============================================================================================================-->
-<h2>CTA</h2>
-広告とか。。。
+
+
+
 </body>
 </html>
