更新日付の自動化

--- a/notTidyHpInfo/000testSite001/html/home/sample.html
+++ b/notTidyHpInfo/000testSite001/html/home/sample.html
@@ -8,8 +8,8 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-最終更新日付：2016/11/28（月）
 <h1>のうはう</h1>
+<div id="lastdaytime"></div>
 <div id="toc"></div>
 
 <!--
