--- a/notTidyHpInfo/000testSite001/html/002kh/khc001tab001.html
+++ b/notTidyHpInfo/000testSite001/html/002kh/khc001tab001.html
@@ -8,8 +8,8 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-最終更新日付：2016/11/28（月）
 <h1>【DB】【MySQL】rootパスワードを忘れた場合</h1>
+<div id="lastdaytime"></div>
 
 <!--===============================================================================================================-->
 <h3>現象</h3>
