--- a/notTidyHpInfo/000testSite001/html/home/home.html
+++ b/notTidyHpInfo/000testSite001/html/home/home.html
@@ -8,10 +8,9 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-最終更新日付：2016/11/26（土）
 <h1>ほーむ</h1>
+<div id="lastdaytime"></div>
 <div id="toc"></div>
-
 
 <p class="resizeimage">
    <img src="../../images/home/test.png" alt="公園">
