辞書と新着リストの追加

--- a/notTidyHpInfo/000testSite002/html/003dc/dcc001tab001.html
+++ b/notTidyHpInfo/000testSite002/html/003dc/dcc001tab001.html
@@ -8,46 +8,35 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>ほーむ</h1>
+<h1>ああああ</h1>
 <div id="lastdaytime"></div>
 <div id="toc"></div>
 
+<!-- 画像テスト -->
 <p class="resizeimage">
-   <img src="../../images/home/test.png" alt="公園">
+   <img src="../../images/home/test.png" >
 </p>
 
-
 <!--===============================================================================================================-->
-<div id="animate-title01"><h2 id="a01">小見出し</h2></div>
+<div id="animate-title01"><h2>小見出し</h2></div>
 <div id="animate-block01" style="display:none">
-<h3 id="b01">サブタイトル</h3>
-本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-<h4 id="c01">サブサブタイトル</h4>
-本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-
+セツメイ
 </div>
+
+<!--===============================================================================================================-->
+<h2>小見出し</h2>
+本文
+
+<!--===============================================================================================================-->
+<h2>小見出し</h2>
+本文
+
 
 
 
 <!--===============================================================================================================-->
-<div id="animate-title02"><h2 id="a02">小見出し</h2></div>
-<div id="animate-block02" style="display:none">
-本文
-</div>
-
-<!--===============================================================================================================-->
-<div id="animate-title03"><h2 id="a03">小見出し</h2></div>
-<div id="animate-block03" style="display:none">
-本文
-</div>
-
-<!--===============================================================================================================-->
-<div id="animate-title90"><h2>まとめ</h2></div>
-<div id="animate-block90" style="display:none">
-本文
-</div>
+<h2>まとめ</h2>
+結論
 <!--===============================================================================================================-->
 </body>
 </html>
