--- a/notTidyHpInfo/000testSite002/html/home/home.html
+++ b/notTidyHpInfo/000testSite002/html/home/home.html
@@ -18,12 +18,12 @@
 
 
 <!--===============================================================================================================-->
-<div id="animate-title01"><h2 id="a01">小見出し</h2></div>
+<div id="animate-title01"><h2>小見出し</h2></div>
 <div id="animate-block01" style="display:none">
-<h3 id="b01">サブタイトル</h3>
+<h3>サブタイトル</h3>
 本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
 本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-<h4 id="c01">サブサブタイトル</h4>
+<h4>サブサブタイトル</h4>
 本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
 本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
 
@@ -32,19 +32,19 @@
 
 
 <!--===============================================================================================================-->
-<div id="animate-title02"><h2 id="a02">小見出し</h2></div>
+<div id="animate-title02"><h2>小見出し</h2></div>
 <div id="animate-block02" style="display:none">
 本文
 </div>
 
 <!--===============================================================================================================-->
-<div id="animate-title03"><h2 id="a03">小見出し</h2></div>
+<div id="animate-title03"><h2>小見出し</h2></div>
 <div id="animate-block03" style="display:none">
 本文
 </div>
 
 <!--===============================================================================================================-->
-<div id="animate-title90"><h2 id="a90">まとめ</h2></div>
+<div id="animate-title90"><h2>まとめ</h2></div>
 <div id="animate-block90" style="display:none">
 本文
 </div>
