--- a/notTidyHpInfo/000testSite002/html/home/home.html
+++ b/notTidyHpInfo/000testSite002/html/home/home.html
@@ -2,39 +2,38 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>カテゴリサンプル</title>
+<title>redhandsj研究所</title>
 <!-- ------------------------------------------------------------------------------- -->
 <SCRIPT src="../../js/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>ほーむ</h1>
+<h1>redhandsj研究所（あちこち工事中）</h1>
 <div id="lastdaytime"></div>
-<div id="toc"></div>
-
-<p class="resizeimage">
-   <img src="../../images/home/test.png" alt="公園">
-</p>
-
-
+<!-- <div id="toc"></div> -->
+<p>
+　いらっしゃいませ。redhandsj研究所です。というか、研究所などとおおげさなタイトルですが、要するに勉強部屋です。<br/>
+　分野はIT全般です。技術寄りな情報が多いですけど、たまにマネジメント関連や雑記を扱います。<br/>
+　本当は、もっと完成してから公開する予定でしたが、やりたいこと載せたいことが多すぎて区切りがつかなくなったので
+一旦公開します。サグラダファミリアのように完成まで気長にいこうと決めました。<br/>
+　一応普通のサラリーマンなので、仕事状況で更新が滞るかもしれませんが宜しくお願いします。<br/>
+　以下の▼のついている項目は開閉しますので詳細はそちらをご覧ください。左上のボタンでサイドメニューが開きます。
+サイト内の検索機能は未実装です。どう実装するかを検討中なので未実装です。このようにちらほら工事中の箇所がありますが
+随時完成に近づけていく予定です。<br/>
+　では、ごゆっくりしていってください。<br/>
+<p>
 <!--===============================================================================================================-->
-<div id="animate-title01"><h2>小見出し</h2></div>
+<div id="animate-title01"><h2>知識</h2></div>
 <div id="animate-block01" style="display:none">
-<h3>サブタイトル</h3>
-本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-<h4>サブサブタイトル</h4>
-本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-本文本文本文本文本文本文本文本文本文本文本文本文本文本文本文
-
+　体系的に知識をまとめていきます。<br/>
+　一応、自分の勉強目的もあり、また、見る方にも見やすいように情報処理試験のカテゴリをもとに組み立てて行きますが変化
+の激しい業界事情で取捨選択することもあるので、常に追加・削除を行うかもしれません。
 </div>
 
-
-
 <!--===============================================================================================================-->
-<div id="animate-title02"><h2>小見出し</h2></div>
+<div id="animate-title02"><h2>ノウハウ</h2></div>
 <div id="animate-block02" style="display:none">
-本文
+　実務で得た知識をまとめて行きます。
 </div>
 
 <!--===============================================================================================================-->
