諸々機能追加

--- a/notTidyHpInfo/000testSite002/html/home/home.html
+++ b/notTidyHpInfo/000testSite002/html/home/home.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>redhandsj研究所</title>
+<title>情報処理技術者試験に関する研究</title>
+<meta name="description" content="「情報処理技術者試験」の学習内容を詳細に掲載していきます。" />
 <!-- ------------------------------------------------------------------------------- -->
 <SCRIPT src="../../js/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>redhandsj研究所（あちこち工事中）</h1>
+<h1>情報処理技術者試験に関するredhandsj研究所（あちこち工事中）</h1>
 <div id="lastdaytime"></div>
 <!-- <div id="toc"></div> -->
 <p>
