--- a/notTidyHpInfo/000testSite002/html/home/sample.html
+++ b/notTidyHpInfo/000testSite002/html/home/sample.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>カテゴリサンプル</title>
+<meta name="description" content="「情報処理技術者試験」の学習内容を詳細に掲載していきます。" />
 <!-- ------------------------------------------------------------------------------- -->
 <SCRIPT src="../../js/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
+<a href="../../docs/index.html">情報処理技術者試験に関する研究 HOMEへ</a>
 <h1>のうはう</h1>
 <div id="lastdaytime"></div>
 <div id="toc"></div>
