--- a/notTidyHpInfo/000testSite002/html/002kh/khc001tab001.html
+++ b/notTidyHpInfo/000testSite002/html/002kh/khc001tab001.html
@@ -8,6 +8,7 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
+<a href="../../docs/index.html">情報処理技術者試験に関する研究 HOMEへ</a>
 <h1>【DB】【MySQL】rootパスワードを忘れた場合</h1>
 <div id="lastdaytime"></div>
 
