--- a/notTidyHpInfo/000testSite002/html/home/home.html
+++ b/notTidyHpInfo/000testSite002/html/home/home.html
@@ -11,7 +11,7 @@
 <body>
 <h1>情報処理技術者試験に関するredhandsj研究所（あちこち工事中）</h1>
 <div id="lastdaytime"></div>
-<!-- <div id="toc"></div> -->
+<div id="toc"></div>
 <p>
 　いらっしゃいませ。redhandsj研究所です。というか、研究所などとおおげさなタイトルですが、要するに勉強部屋です。<br/>
 　分野はIT全般です。技術寄りな情報が多いですけど、たまにマネジメント関連や雑記を扱います。<br/>
