--- a/notTidyHpInfo/000testSite002/html/001ap/ap001_001_002_001.html
+++ b/notTidyHpInfo/000testSite002/html/001ap/ap001_001_002_001.html
@@ -2,20 +2,26 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>カテゴリサンプル</title>
+<title>情報処理技術者試験に関する研究「r進数の変換」</title>
+<meta name="description" content="「r進数の変換」は、r進数の中で、同じ個数を異なる基数の進数で表す場合の変換をいいます。" />
 <!-- ------------------------------------------------------------------------------- -->
 <SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>r進数</h1>
+<h1>r進数の変換</h1>
 <div id="lastdaytime"></div>
 <div id="toc"></div>
 <!--===============================================================================================================-->
 <div id="animate-title01"><h2>概要</h2></div>
 <div id="animate-block01" style="display:none">
-
-
+<ul>
+<li>「r進数の変換」は、r進数の中で、同じ個数を異なる基数の進数で表す場合の変換をいいます。
+  <ul>
+  <li> １０進数の、125は、８進数では175になります。
+  </ul>
+<li>
+</ul>
 </div>
 <!--===============================================================================================================-->
 <div id="animate-title02"><h2>図解</h2></div>
@@ -27,12 +33,10 @@
 <div id="animate-title03"><h2>詳細</h2></div>
 <div id="animate-block03" style="display:none">
 
-
 </div>
 <!--===============================================================================================================-->
 <div id="animate-title04"><h2>備考</h2></div>
 <div id="animate-block04" style="display:none">
-
 
 </div>
 <!--===============================================================================================================-->
