--- a/notTidyHpInfo/000testSite002/html/home/home.html
+++ b/notTidyHpInfo/000testSite002/html/home/home.html
@@ -5,7 +5,7 @@
 <title>情報処理技術者試験に関する研究</title>
 <meta name="description" content="「情報処理技術者試験」の学習内容を詳細に掲載していきます。" />
 <!-- ------------------------------------------------------------------------------- -->
-<SCRIPT src="../../js/commonHeaderSetting.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
@@ -19,7 +19,7 @@
 一旦公開します。サグラダファミリアのように完成まで気長にいこうと決めました。<br/>
 　一応普通のサラリーマンなので、仕事状況で更新が滞るかもしれませんが宜しくお願いします。<br/>
 　以下の▼のついている項目は開閉しますので詳細はそちらをご覧ください。左上のボタンでサイドメニューが開きます。
-サイト内の検索機能は未実装です。どう実装するかを検討中なので未実装です。このようにちらほら工事中の箇所がありますが
+サイト内の検索機能は未実装です。どう実装するかを検討中なので未実装です。このように工事中の箇所が大半でありますが
 随時完成に近づけていく予定です。<br/>
 　では、ごゆっくりしていってください。<br/>
 <p>
@@ -34,17 +34,19 @@
 <!--===============================================================================================================-->
 <div id="animate-title02"><h2>ノウハウ</h2></div>
 <div id="animate-block02" style="display:none">
-　実務で得た知識をまとめて行きます。
+　実務で得た知識をまとめて行きます。<br/>
+　カテゴリ分けが微妙な気もしますが。。。
 </div>
 
 <!--===============================================================================================================-->
-<div id="animate-title03"><h2>小見出し</h2></div>
+<div id="animate-title03"><h2>辞書</h2></div>
 <div id="animate-block03" style="display:none">
-本文
+　知識を単語単位でまとめます。<br/>
+　この業界新しい言葉が毎日のように生まれては消えていくのですが、消すのはもったいないので基本的には積上げていく所存です
 </div>
 
 <!--===============================================================================================================-->
-<div id="animate-title90"><h2>まとめ</h2></div>
+<div id="animate-title90"><h2>サイトマップ</h2></div>
 <div id="animate-block90" style="display:none">
 本文
 </div>
