--- a/notTidyHpInfo/000testSite002/html/home/sitemap.html
+++ b/notTidyHpInfo/000testSite002/html/home/sitemap.html
@@ -5,36 +5,25 @@
 <title>カテゴリサンプル</title>
 <!-- ------------------------------------------------------------------------------- -->
 <SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="../../js/makeSitemap.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>r進数</h1>
-<div id="lastdaytime"></div>
-<div id="toc"></div>
+<h1>サイトマップ</h1>
 <!--===============================================================================================================-->
-<div id="animate-title01"><h2>概要</h2></div>
+<div id="animate-title01"><h2>知識</h2></div>
 <div id="animate-block01" style="display:none">
-
-
+<ul id="sitemap01"></ul>
 </div>
-<!--===============================================================================================================-->
-<div id="animate-title02"><h2>図解</h2></div>
+<div id="animate-title02"><h2>のうはう</h2></div>
 <div id="animate-block02" style="display:none">
-
-
+<ul id="sitemap02"></ul>
 </div>
-<!--===============================================================================================================-->
-<div id="animate-title03"><h2>詳細</h2></div>
+<div id="animate-title03"><h2>辞書</h2></div>
 <div id="animate-block03" style="display:none">
-
-
+<ul id="sitemap03"></ul>
 </div>
-<!--===============================================================================================================-->
-<div id="animate-title04"><h2>備考</h2></div>
-<div id="animate-block04" style="display:none">
 
-
-</div>
 <!--===============================================================================================================-->
 </body>
 </html>
