--- a/notTidyHpInfo/000testSite002/html/001ap/ap001_001_001_001.html
+++ b/notTidyHpInfo/000testSite002/html/001ap/ap001_001_001_001.html
@@ -2,22 +2,27 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>カテゴリサンプル</title>
+<title>情報処理技術者試験に関する研究「r進数」</title>
+<meta name="description" content="「r進数」とは、少ない記号数で無限の数を数えようとする表現です。" />
 <!-- ------------------------------------------------------------------------------- -->
-<SCRIPT src="../../js/commonHeaderSetting.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
 <h1>r進数</h1>
 <div id="lastdaytime"></div>
 <div id="toc"></div>
-
 <!--===============================================================================================================-->
 <div id="animate-title01"><h2>概要</h2></div>
 <div id="animate-block01" style="display:none">
 <ul>
-<li>少ない記号数で無限の数を数えようとする表現
-<li>
+<li>少ない記号数で無限の数を数えようとする表現です。
+<li>r進数の「r」は、使う数字（数を表す記号）の数（基数っていいます）
+  <ul>
+  <li> r が 8個 → 0,1,2,3,4,5,6,7 の 8種類を使う → 8進数といいます。
+  <li> r が10個 → 0,1,2,3,4,5,6,7,8,9 の10種類を使う → 10進数といいます。
+  <li> r が16個 → 0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F の16種類を使う → 16進数といいます。
+  </ul>
 </ul>
 </div>
 <!--===============================================================================================================-->
@@ -30,12 +35,10 @@
 <div id="animate-title03"><h2>詳細</h2></div>
 <div id="animate-block03" style="display:none">
 
-
 </div>
 <!--===============================================================================================================-->
 <div id="animate-title04"><h2>備考</h2></div>
 <div id="animate-block04" style="display:none">
-
 
 </div>
 <!--===============================================================================================================-->
