--- a/notTidyHpInfo/000testSite002/html/001ap/ap001_001_001_001.html
+++ b/notTidyHpInfo/000testSite002/html/001ap/ap001_001_001_001.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>情報処理技術者試験に関する研究「r進数」</title>
+<title>r進数</title>
 <meta name="description" content="「r進数」とは、少ない記号数で無限の数を数えようとする表現です。" />
 <!-- ------------------------------------------------------------------------------- -->
 <SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
