--- a/notTidyHpInfo/000testSite002/html/001ap/ap001_001_001_002.html
+++ b/notTidyHpInfo/000testSite002/html/001ap/ap001_001_001_002.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>情報処理技術者試験に関する研究「r進数の変換」</title>
+<title>r進数の変換</title>
 <meta name="description" content="「r進数の変換」は、r進数の中で、同じ個数を異なる基数の進数で表す場合の変換をいいます。" />
 <!-- ------------------------------------------------------------------------------- -->
 <SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
