メニュー、js整頓

--- a/notTidyHpInfo/000testSite002/html/001dc/dc001_001_001_001.html
+++ b/notTidyHpInfo/000testSite002/html/001dc/dc001_001_001_001.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>カテゴリサンプル</title>
 <!-- ------------------------------------------------------------------------------- -->
-<SCRIPT src="../../js/commonHeaderSetting.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="../../js/pages/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
