--- a/notTidyHpInfo/000testSite002/html/100ap/ap001_001_002_001.html
+++ b/notTidyHpInfo/000testSite002/html/100ap/ap001_001_002_001.html
@@ -2,25 +2,21 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>r進数の変換</title>
-<meta name="description" content="「r進数の変換」は、r進数の中で、同じ個数を異なる基数の進数で表す場合の変換をいいます。" />
+<title>正の整数の表現</title>
+<meta name="description" content="「正の整数の表現」は、２進数の小数点の左に記載する事で表現できる数です。" />
 <!-- ------------------------------------------------------------------------------- -->
-<SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="../../js/pages/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>r進数の変換</h1>
+<h1>正の整数の表現</h1>
 <div id="lastdaytime"></div>
 <div id="toc"></div>
 <!--===============================================================================================================-->
 <div id="animate-title01"><h2>概要</h2></div>
 <div id="animate-block01" style="display:none">
 <ul>
-<li>「r進数の変換」は、r進数の中で、同じ個数を異なる基数の進数で表す場合の変換をいいます。
-  <ul>
-  <li> １０進数の、125は、８進数では175になります。
-  </ul>
-<li>
+<li>「正の整数の表現」は、２進数の小数点の左に記載する事で表現できる数です。
 </ul>
 </div>
 <!--===============================================================================================================-->
@@ -32,14 +28,19 @@
 <!--===============================================================================================================-->
 <div id="animate-title03"><h2>詳細</h2></div>
 <div id="animate-block03" style="display:none">
+　まず、数には『正（＋）』と『負（－）』があります。この中で、０より大きな数字を正としています。
+そしてこれを表すのにr進数で学んだ２進数を使うとしましよう。<br>
+
+
+<h3></h3>
+
+
 
 </div>
 <!--===============================================================================================================-->
 <div id="animate-title04"><h2>備考</h2></div>
 <div id="animate-block04" style="display:none">
-<ul>
-<li> (3n+1)進数で表された３の倍数の各桁の総和は、３の倍数になるってさ
-</ul>
+
 </div>
 <!--===============================================================================================================-->
 </body>
