--- a/notTidyHpInfo/000testSite002/html/home/sample.html
+++ b/notTidyHpInfo/000testSite002/html/home/sample.html
@@ -5,7 +5,7 @@
 <title>カテゴリサンプル</title>
 <meta name="description" content="「情報処理技術者試験」の学習内容を詳細に掲載していきます。" />
 <!-- ------------------------------------------------------------------------------- -->
-<SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="../../js/pages/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
