--- a/notTidyHpInfo/000testSite002/html/home/sitemap.html
+++ b/notTidyHpInfo/000testSite002/html/home/sitemap.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>カテゴリサンプル</title>
 <!-- ------------------------------------------------------------------------------- -->
-<SCRIPT type="text/javascript" src="../../js/commonHeaderSetting.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="../../js/makeSitemap.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="../../js/pages/commonHeaderSetting.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="../../js/home/makeSitemap.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
