未整頓リストベース作成

--- a/notTidyHpInfo/000testSite002/html/900kh/kh001_001_001_001.html
+++ b/notTidyHpInfo/000testSite002/html/900kh/kh001_001_001_001.html
@@ -8,18 +8,44 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<a href="../../docs/index.html">情報処理技術者試験に関する研究 HOMEへ</a>
-<h1>【DB】【MySQL】rootパスワードを忘れた場合</h1>
+<h1>未整頓の気になった何かの情報のURL集め</h1>
 <div id="lastdaytime"></div>
 
 <!--===============================================================================================================-->
-<h3>現象</h3>
+<h3>リスト</h3>
 <ul>
-<li>以下のような現象に出会った場合の対処です
-</ul>
-<pre class="brush: 	bash;" >
-ERROR 1045 (28000): Access denied for user 'root'@'localhost' (using password: YES)
+<!-- ---------------------------------------------- -->
+<li>Gradle
+<pre class="brush: xml;">
+
 </pre>
+<!-- ---------------------------------------------- -->
+<li>
+<pre class="brush: xml;">
+
+</pre>
+<!-- ---------------------------------------------- -->
+<li>
+<pre class="brush: xml;">
+
+</pre>
+<!-- ---------------------------------------------- -->
+<li>
+<pre class="brush: xml;">
+
+</pre>
+<!-- ---------------------------------------------- -->
+<li>
+<pre class="brush: xml;">
+
+</pre>
+<!-- ---------------------------------------------- -->
+<li>
+<pre class="brush: xml;">
+
+</pre>
+
+</ul>
 
 
 
