--- a/notTidyHpInfo/000testSite002/html/900kh/kh001_001_001_001.html
+++ b/notTidyHpInfo/000testSite002/html/900kh/kh001_001_001_001.html
@@ -17,27 +17,35 @@
 <!-- ---------------------------------------------- -->
 <li>Gradle
 <pre class="brush: xml;">
-
+<!-- Qiita Gradle入門 -->
+http://qiita.com/vvakame/items/83366fbfa47562fafbf4
 </pre>
 <!-- ---------------------------------------------- -->
-<li>
+<li> OpenVPN
 <pre class="brush: xml;">
-
+<!--  How To -->
+  https://www.openvpn.jp/document/how-to/
 </pre>
 <!-- ---------------------------------------------- -->
-<li>
+<li>PHP laravel
 <pre class="brush: xml;">
+<!-- Eclipse と Xdebug で PHP をステップ実行 PHP Advent Calendar jp  -->
+http://slumbers99.blogspot.jp/2011/12/eclipse-xdebug-php-php-advent-calendar.html
 
+<!-- Eclipse と Xdebug で PHP をステップ実行 PHP Advent Calendar jp  -->
+http://slumbers99.blogspot.jp/2011/12/eclipse-xdebug-php-php-advent-calendar.html
 </pre>
 <!-- ---------------------------------------------- -->
-<li>
+<li>RADIUS サーバ
 <pre class="brush: xml;">
-
+<!-- にわか管理者のためのWindowsサーバ入門【第73回】RADIUSサーバを利用した認証(1) -->
+https://news.mynavi.jp/itsearch/article/hardware/905
 </pre>
 <!-- ---------------------------------------------- -->
-<li>
+<li> レプリケーション
 <pre class="brush: xml;">
-
+<!-- データレプリケーションとは？ メリットは？ -->
+http://it-trend.jp/data-replication/article/explain
 </pre>
 <!-- ---------------------------------------------- -->
 <li>
