--- a/notTidyHpInfo/000testSite002/html/900kh/kh001_001_001_001.html
+++ b/notTidyHpInfo/000testSite002/html/900kh/kh001_001_001_001.html
@@ -32,8 +32,8 @@ http://qiita.com/vvakame/items/83366fbfa47562fafbf4
 <!-- Eclipse と Xdebug で PHP をステップ実行 PHP Advent Calendar jp  -->
 http://slumbers99.blogspot.jp/2011/12/eclipse-xdebug-php-php-advent-calendar.html
 
-<!-- Eclipse と Xdebug で PHP をステップ実行 PHP Advent Calendar jp  -->
-http://slumbers99.blogspot.jp/2011/12/eclipse-xdebug-php-php-advent-calendar.html
+<!-- Laravel出力ログファイルの切り替え  -->
+https://blog.e2info.co.jp/2014/07/23/laravel-log-rotation/
 </pre>
 <!-- ---------------------------------------------- -->
 <li>RADIUS サーバ
